--- a/public/mobile.html
+++ b/public/mobile.html
@@ -45,7 +45,11 @@
           <div style="display:flex;gap:12px">
             <div style="flex:1">
               <label style="font-size:12px">Antall</label>
-              <input id="mv-qty" type="number" value="1" min="1" style="width:100%">
+              <div style="display:flex;gap:6px;align-items:center">
+                <button id="qty-dec" class="btn small" type="button" aria-label="Minus">−</button>
+                <input id="mv-qty" type="number" value="1" min="1" style="flex:1;width:100%">
+                <button id="qty-inc" class="btn small" type="button" aria-label="Pluss">+</button>
+              </div>
             </div>
             <div style="flex:1">
               <label style="font-size:12px">Retning</label>
