--- a/public/mobile.html
+++ b/public/mobile.html
@@ -47,7 +47,7 @@
               <label style="font-size:12px">Antall</label>
               <div style="display:flex;gap:6px;align-items:center">
                 <button id="qty-dec" class="btn small" type="button" aria-label="Minus">−</button>
-                <input id="mv-qty" type="number" value="1" min="1" step="1" inputmode="numeric" pattern="[0-9]*" style="flex:1;width:100%">
+                <input id="mv-qty" type="text" value="1" inputmode="numeric" enterkeyhint="done" pattern="[0-9]*" autocomplete="off" style="flex:1;width:100%">
                 <button id="qty-inc" class="btn small" type="button" aria-label="Pluss">+</button>
               </div>
             </div>
