--- a/public/mobile.html
+++ b/public/mobile.html
@@ -26,6 +26,11 @@
         <button id="ws-indicator" class="btn small" type="button" disabled style="opacity:.7">WS…</button>
       </div>
 
+      <div id="loc-banner" class="muted" style="display:none;margin-top:6px;font-size:12px;padding:6px 8px;border:1px dashed #cbd3df;border-radius:6px;background:#f8fafc">
+        Valgt lokasjon: <strong id="loc-code"></strong>
+        <button id="clear-loc" class="btn small" type="button" style="margin-left:8px;padding:2px 6px;font-size:11px">Fjern</button>
+      </div>
+
       <div id="kbd-scan-wrap" style="margin-top:10px">
         <label for="kbd-scan" class="muted" style="font-size:12px">Tastatur‑skann (Zebra)</label>
   <input id="kbd-scan" placeholder="Trykk her og skann…" autocomplete="off" spellcheck="false" inputmode="none" tabindex="0" readonly style="width:100%;padding:10px;border:1px solid #dcdfe5;border-radius:8px" />
@@ -40,6 +45,9 @@
           <div>
             <label style="font-size:12px">Del</label>
             <input id="mv-part" readonly style="width:100%;background:#f5f5f5">
+          </div>
+          <div id="mv-loc-hint" class="muted" style="display:none;font-size:12px;background:#fff7e6;border:1px solid #ffe1b3;padding:6px 8px;border-radius:6px">
+            Denne delen har ingen fast lokasjon. Skann lokasjon først (scan lokasjonsstrekkoden), deretter trykk Lagre.
           </div>
           <div id="mv-info" style="font-size:12px;line-height:1.3;background:#f8f9fb;border:1px solid #e2e6ec;padding:8px 10px;border-radius:6px;display:none"></div>
           <div style="display:flex;gap:12px">
