--- a/public/index.html
+++ b/public/index.html
@@ -78,13 +78,13 @@
             </div>
             <div class="muted" style="font-size:12px">Velg en lokasjon eller trykk Fjern for å slette fast lokasjon</div>
           </div>
-          <div style="flex:2;min-width:260px">
-            <label style="font-size:12px">Sett lagerantall (eksakt)</label>
-            <div style="display:flex;gap:6px;align-items:center">
-              <select id="ed-stock-loc" style="flex:1"></select>
-              <input id="ed-qty" type="number" value="0" style="width:120px">
-            </div>
-            <div class="muted" style="font-size:12px">Velg lokasjon og sett antall. Dette overstyrer eksisterende antall for valgt lokasjon.</div>
+        </div>
+        <div style="margin-top:6px">
+          <label style="font-size:12px">Lokasjoner og antall</label>
+          <div id="ed-stock-rows" style="display:flex;flex-direction:column;gap:6px"></div>
+          <div style="margin-top:6px;display:flex;gap:8px;align-items:center">
+            <button id="ed-add-row" class="btn small" type="button">Legg til lokasjon</button>
+            <div class="muted" style="font-size:12px">Sett eksakt antall per lokasjon. 0 fjerner beholdning.</div>
           </div>
         </div>
         <div style="display:flex;gap:8px;flex-wrap:wrap">
